docs: record the dependency sweep and its REPL discoveries
Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>